Fixes to Lobby and GameModel's tests